# PhysiScript-Python

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
physiscript/: typing.py
physiscript/math/: vectors.py
playground/: playground.py
