[tool.poetry]
name = "physiscript"
version = "0.1.0"
description = ""
authors = ["Shai Avraham <shaia1112011@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ShaiAvr/PhysiScript"
exclude = ["playground"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
moderngl = "^5.6.4"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
black = "^22.1.0"
mypy = "^0.931"
pytest = "^7.1.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"
flakeheaven = "^0.11.1"

# Flake8 plugins
flake8-type-checking = "^1.3.2"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-simplify = "^0.18.1"

[tool.flakeheaven]
format = "grouped"
show_source = true
max_line_length = 88
max_complexity = 18
exclude = [".git", ".venv", "__pycache__", "docs/source/conf.py", "old", "build", "dist"]

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
# flake8-type-checking = ["+TC0*", "+TC1*"]
flake8-type-checking = ["+*", "+TC1*"]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]

[tool.black]
extend-exclude = "__pycache__"
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
line_length = 88

[tool.mypy]
python_version = "3.10"
show_error_context = true
show_error_codes = true
show_column_numbers = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
